--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,10 +24,12 @@
     "@react-navigation/native": "^7.0.14",
     "axios": "^1.8.2",
     "expo": "~52.0.37",
+    "expo-av": "^15.0.2",
     "expo-blur": "~14.0.3",
     "expo-constants": "~17.0.7",
     "expo-font": "~13.0.4",
     "expo-haptics": "~14.0.1",
+    "expo-image-picker": "^16.0.6",
     "expo-linking": "~7.0.5",
     "expo-router": "~4.0.17",
     "expo-splash-screen": "~0.29.22",
